	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r941)
 * FIXME: description files beginning with "#!fim:desc" (whatever extension) can now
   be detected and loaded as they were normal image files (FIXME: undocumented)
 * FIXME: did something with --enable-unicode ?
# (r936)
 * added --reverse to reverse the file list
# (r933)
 * added --sort-mtime to sort file list according to modification time
 * added --sort-fsize to sort file list according to file size
 * to list command added subcommand 'sort_mtime' to sort file list according to modification time
 * to list command added subcommand 'sort_fsize' to sort file list according to file size
# (r931)
 * added the _lastgotodirection variable, with the last file goto direction
 * key Enter will now mark and then go forward or back according to _lastgotodirection 

                Version 0.5

# (r746*)
 * -R / --recursive switch to turn on recursive push of command line specified directories
# (r669*)
 * added --sort and --sort-basename to sort the images list
 * introduced mipmap mechanism (_use_mipmaps) for faster display/scaling of images
# (r644,r651*) (undocumented) r676)
 * status bar customizable with _display_status_fmt and _info_fmt_str, which can be
   controlled by the use of special image variable specifiers ('expandos'):
    "%T" expando to get (and display) total memory used by the program 
    "%C" expando to get (and display) file/memory usage by image cache
    "%M" expando to get (and display) memory used by the current (displayed) image
    "%c" expando to get (and display) centering information
    "%m" expando to get (and display) current image mipmap occupation information
    "%k" expando to get (and display) current image i:_comment value
    "%?PRE?VAR?POST?" expando to get (and display) "PRE".i:VAR."POST"
    ...
# (r674*)
 * search (and jump) on image descriptions via 'goto' and key '/'
# (r696)